# bare-open

./: CMakeLists.txt  README.md  apple.m  binding.c  index.js  linux.c  package.json  win32.c
.github/workflows/: prebuild.yml
